--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: [ubuntu-latest] # self-hosted
-    environment: secrets
+    environment: AWS
 
     steps:
       # Step 1: Checkout the repository
